# zed

./: .gitignore  17-4-2026.md  18-04-2026.md  AGENTS.md  CHANGELOG.md  CHESS.md  Cargo.toml  DX.md  DX.txt  HOLE_PUNCHING.md  HORIZENTAL_SCROLL.md  PLAN.md  PLAN_DEPRICATED.md  PREMIUM.txt  SCREENS.md  SIDEBAR.md  TODO.md  WEB_PREVIEW.md  WEB_PREVIEW_STATUS.md  WINDOWS_WEB_PREVIEW_IMPLEMENTATION_REPORT.md  changelog.txt  justfile  todo.txt
.cargo/: config.toml  low-memory-config.toml
crates/font_panel/: Cargo.toml
crates/font_panel/src/: font_panel.rs  google_fonts.rs
crates/icon_picker/: Cargo.toml
crates/icon_picker/src/: icon_pack_index.tsv  icon_picker.rs  icon_representative_bodies.tsv
crates/liquid_glass/: .gitignore  Cargo.toml  README.md
crates/liquid_glass/assets/shaders/: Blur.glsl
crates/liquid_glass/src/: backgrounds.rs  element.rs  lib.rs  liquid_glass_view.rs  main.rs  ui_state.rs
crates/liquid_glass/src/shaders/: blur.wgsl  liquid_glass.wgsl
crates/media_panel/: Cargo.toml
crates/media_panel/src/: media_panel.rs
crates/shadcn_ui/: Cargo.toml
crates/shadcn_ui/src/: shadcn_ui.rs
crates/shadcn_ui_panel/: Cargo.toml
crates/shadcn_ui_panel/src/: registry_directory.rs  shadcn_catalog_index.tsv  shadcn_ui_panel.rs
crates/web_preview/: Cargo.toml
crates/web_preview/src/: agent_browser_contracts.rs  dx_studio.rs  dx_studio_bridge.rs  dx_studio_session.rs  dx_studio_source_edit.rs  dx_style_generator_surface.rs  dx_style_native_writer_replay.rs  dx_style_source_apply.rs  web_preview.rs  web_preview_view.rs  windows_visual_webview.rs
crates/web_preview/src/dx_studio/: manifest.rs  project.rs  routes.rs
crates/web_preview/src/dx_studio_bridge/: api.ts  capture.ts  overlay.ts  preamble.ts  selection.ts  source_edit.ts
crates/web_preview/src/dx_studio_source_edit/: manifest.rs  manifest_ts.rs  operations.rs  paths.rs  plan.rs  receipt.rs  snapshot.rs  source_ranges.rs  values.rs
crates/web_preview/src/dx_studio_source_edit/manifest/: selectors.rs  summaries.rs
crates/web_preview/src/dx_studio_source_edit/operations/: guards.rs  insert.rs  reorder.rs  text.rs  token.rs
crates/web_preview/src/dx_style_generator_surface/: catalog.rs  controls.rs  css-declaration-dry-run-contract.generated.json  css_declaration_dry_run_contract.rs  css_declaration_dry_run_script.rs  fixture.rs  group-context-contract.generated.json  group_context_contract.rs  recipes.rs  reverse-css-delta-contract.generated.json  reverse_css_delta_contract.rs  script.rs  source-apply-contract.generated.json  source_apply_contract.rs  source_apply_session_script.rs  style.rs  visual-generator-catalog.generated.json  visual-generator-control-catalog.generated.json  visual-generator-recipe-catalog.generated.json
crates/web_preview_linux/: Cargo.toml
crates/web_preview_linux/src/: lib.rs  wayland_host.rs  web_preview_view.rs  x11_host.rs
hexed/: AGENT.md  AGENTS.md  AI_HELP_WEB_PREVIEW_ISSUES.md  BUILD_LOW_MEMORY.md  CHANGELOG.md  DX_NATIVE_TOOLS_INTEGRATION_PLAN.md  DX_VISION.md  FREE.md  GIT.md  GPUI_INTEGRATION_PLAN.md  HELP_NEEDED.md  MODELS.md  PROMPT.md  REMAINING_ISSUES.md  SIDEBAR.md  TODO.md  WEB_PREVIEW.txt  WEB_PREVIEW_IMPLEMENTATION.md  WHISPERFLOW.md  WINDOWS_WEB_PREVIEW_IMPLEMENTATION_REPORT.md  changelog.txt  todo.txt
inspirations/crates/flow-browser-core/: Cargo.toml  README.md
inspirations/crates/flow-browser-core/src/: engine.rs  lib.rs  types.rs
inspirations/rlm/: .env.example  CHANGELOG.md  Cargo.toml  QUICK_START.txt  README.md  RLM_RESULTS.md  ROADMAP.md  TODO.md  VERIFICATION.txt  demo_single_query.py  gemini_rlm_demo.py  rlm_only_demo.py  test_api.sh  test_groq_api.py  test_large_doc.py  test_rlm_tokens.py  ultimate_rlm_demo.py
inspirations/rlm/docs/: INTEGRATIONS.md  PRODUCTION_READY.md
inspirations/rlm/examples/: benchmark.rs  cache_demo.rs  fast_search.rs  multi_model_demo.rs  parallel_benchmark.rs  phase1_demo.rs  phase2_complete.rs  phase3_complete.rs  recursive_reduce.rs  simple_test.rs  streaming_demo.rs  ultimate_demo.rs
inspirations/rlm/src/: error.rs  lib.rs  llm.rs  parser.rs  repl.rs  rlm.rs
inspirations/serializer/: CHANGELOG.md  Cargo.toml  README.md
inspirations/serializer/docs/: DX_SERIALIZER.md  INTEGRATIONS.md  PRODUCTION_READY.md  TUI.md
inspirations/serializer/examples/: main.rs
inspirations/serializer/examples/parts/: agent_syntax.rs  arrays.rs  arrays_of_arrays.rs  decode_strict.rs  delimiters.rs  empty_and_root.rs  mixed_arrays.rs  objects.rs  round_trip.rs  structs.rs  tabular.rs
inspirations/serializer/src/: lib.rs
inspirations/serializer/src/cli/: main.rs
inspirations/serializer/src/decode/: mod.rs
inspirations/serializer/src/encode/: mod.rs
inspirations/serializer/src/llm/: conversation.rs  mod.rs  packed.rs  schema.rs  util.rs
inspirations/serializer/src/tui/: app.rs
inspirations/serializer/src/tui/components/: help_screen.rs
inspirations/serializer/src/tui/state/: app_state.rs
inspirations/serializer/tests/: agent_syntax.rs  arrays.rs  delimiters.rs  errors.rs  numeric.rs  objects.rs  real_world.rs  round_trip.rs  spec_fixtures.rs  unicode.rs
script/: dx-acp-tools-source.test.ts  dx-activity-indicator-source.test.ts  dx-agent-bridge-source.test.ts  dx-agent-config-options-source.test.ts  dx-agent-configuration-modal-source.test.ts  dx-agent-configuration-source.test.ts  dx-agent-diff-source.test.ts  dx-agent-panel-clipboard-source.test.ts  dx-agent-panel-input-source.test.ts  dx-agent-persisted-state-source.test.ts  dx-agent-registry-ui-source.test.ts  dx-agent-server-store-source.test.ts  dx-agent-thread-view-source.test.ts  dx-agent-tool-picker-source.test.ts  dx-agent-ui-selector-source.test.ts  dx-breadcrumbs-source.test.ts  dx-buffer-codegen-source.test.ts  dx-check-panel-source.test.ts  dx-collab-notifications-source.test.ts  dx-collab-panel-source.test.ts  dx-command-palette-source.test.ts  dx-completion-provider-source.test.ts  dx-component-preview-source.test.ts  dx-context-server-store-source.test.ts  dx-debugger-attach-modal-source.test.ts  dx-debugger-panel-source.test.ts  (+102 more)
(+948 files in other folders)
