[package]
name = "font_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/font_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
fs.workspace = true
gpui.workspace = true
settings.workspace = true
theme.workspace = true
theme_settings.workspace = true
ui.workspace = true
url.workspace = true
web_preview.workspace = true
workspace.workspace = true
