[package]
name = "icon_picker"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/icon_picker.rs"
doctest = false

[dependencies]
anyhow.workspace = true
assets.workspace = true
editor.workspace = true
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
