[package]
name = "liquid-glass-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
env_logger = "0.11.9"
image = "0.25.10"
pollster = "0.4.0"
wgpu = "28.0.0"
winit = "0.30.13"
imgui = "0.12.0"
imgui-wgpu = "0.27.0"
imgui-winit-support = "0.13.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
