[package]
name = "media_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/media_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
serde.workspace = true
serde_json.workspace = true
ui.workspace = true
url.workspace = true
web_preview.workspace = true
workspace.workspace = true
