[package]
name = "shadcn_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/shadcn_ui.rs"
doctest = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
workspace.workspace = true
