[package]
name = "shadcn_ui_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/shadcn_ui_panel.rs"
doctest = false

[dependencies]
anyhow.workspace = true
db.workspace = true
editor.workspace = true
gpui.workspace = true
memmap2 = "0.9.8"
rkyv = "0.7.45"
serde.workspace = true
serde_json.workspace = true
ui.workspace = true
url.workspace = true
web_preview.workspace = true
workspace.workspace = true
