[package]
name = "web_preview"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/web_preview.rs"

[dependencies]
workspace.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
web_preview_windows.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
web_preview_macos.workspace = true

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
web_preview_linux.workspace = true
