[package]
name = "web_preview"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/web_preview.rs"

[dependencies]
workspace.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
anyhow.workspace = true
agent-client-protocol.workspace = true
agent_ui.workspace = true
base64.workspace = true
acp_thread.workspace = true
editor.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
gpui_windows.workspace = true
html_to_markdown.workspace = true
http_client.workspace = true
image.workspace = true
markdown.workspace = true
menu.workspace = true
paths.workspace = true
project.workspace = true
raw-window-handle = "0.6"
serde_json.workspace = true
ui.workspace = true
url.workspace = true
uuid.workspace = true
windows.workspace = true
wry = "0.53"
webview2-com = "0.38"
zed_actions.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
web_preview_macos.workspace = true

[target.'cfg(all(unix, not(target_os = "macos"), not(target_os = "windows")))'.dependencies]
web_preview_linux.workspace = true
