[package]
name = "web_preview_linux"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
agent-client-protocol.workspace = true
agent_ui.workspace = true
base64.workspace = true
acp_thread.workspace = true
editor.workspace = true
fs.workspace = true
futures.workspace = true
gpui.workspace = true
html_to_markdown.workspace = true
http_client.workspace = true
image.workspace = true
markdown.workspace = true
menu.workspace = true
paths.workspace = true
raw-window-handle = "0.6"
serde_json.workspace = true
ui.workspace = true
url.workspace = true
workspace.workspace = true
wry = "0.53"

[target.'cfg(target_os = "linux")'.dependencies]
gdk-pixbuf = "0.18"
gtk = "0.18"
gdkx11 = "0.18"
gdkwayland = "0.18"
gpui_linux.workspace = true
