[package]
name = "serializer"
version = "0.5.0"
edition = "2024"
authors = ["essence"]
license = "MIT"
description = "Serializer - Token-efficient serialization format for LLM prompts"
repository = "https://github.com/essence/serializer-rust"
homepage = "https://serializer.dev"
documentation = "https://docs.rs/serializer"
keywords = ["serializer", "llm", "token", "serialization", "dx"]
categories = ["encoding", "parser-implementations"]
readme = "README.md"

[[example]]
name = "examples"
path = "examples/main.rs"

[[bin]]
name = "serializer"
path = "src/cli/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
    "dep:clap",
    "dep:anyhow",
    "dep:tiktoken-rs",
    "dep:comfy-table",
    "dep:ratatui",
    "dep:crossterm",
    "dep:tui-textarea",
    "dep:arboard",
    "dep:syntect",
    "dep:unicode-width",
    "dep:chrono",
]

[dependencies]
anyhow = { version = "1.0.102", optional = true }
arboard = { version = "3.6.1", optional = true }
chrono = { version = "0.4.44", optional = true }
clap = { version = "4.6.0", features = ["derive"], optional = true }
comfy-table = { version = "7.2.2", optional = true }
crossterm = { version = "0.29.0", optional = true }
indexmap = { version = "2.13.0", features = ["serde"] }
ratatui = { version = "0.30.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
syntect = { version = "5.3.0", optional = true }
thiserror = "2.0.18"
tiktoken-rs = { version = "0.9.1", optional = true }
tui-textarea = { version = "0.7.0", optional = true }
unicode-width = { version = "0.2", optional = true }

[dev-dependencies]
datatest-stable = "0.3.3"
glob = "0.3"

[[test]]
name = "spec_fixtures"
harness = false
