[package]
name = "flow-browser-core"
version = "0.1.0"
edition = "2024"
description = "WASM-friendly browser orchestration core for Flow local browser inference"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

